# lens

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
lens/: .gitignore  README.md  pyproject.toml  requirements.txt
lens/lens/: cli.py  coordinator.py  hooks.py  mcp_server.py  schemas.py  session_store.py
lens/lens/agents/: analyser_agent.py  document_agent.py  search_agent.py  writer_agent.py
