[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lens"
version = "0.1.0"
description = "Open source AI research workspace — persistent projects, parallel agents, structured output"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sqlite-utils>=3.35.0",
    "structlog>=24.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lens = "lens.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lens*"]
